generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Utilisateur {
  id        String   @id @default(uuid())
  email     String   @unique
  password  String
  firstName String
  lastName  String
  avatar    String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  notifEmail  Boolean @default(true)
  notifPush   Boolean @default(false)
  notifWeekly Boolean @default(true)

  isPremium            Boolean  @default(false)
  premiumSource        String?
  stripeCustomerId     String?
  stripeSubscriptionId String?
  premiumExpiresAt     DateTime?

  vehicles            Vehicule[]
  alerts              Alerte[]
  shareLinks          LienPartage[]
  pushSubscriptions   AbonnementPush[]
  refreshTokens       RefreshToken[]
  passwordResetTokens PasswordResetToken[]

  @@index([stripeSubscriptionId])
  @@map("utilisateurs")
}

model Vehicule {
  id              String   @id @default(uuid())
  brand           String
  model           String
  year            Int
  mileage         Int      @default(0)
  purchaseMileage Int?
  photo           String?
  licensePlate    String?
  color           String?
  fuelType        FuelType @default(GASOLINE)
  purchasePrice   Float?
  carapiTrimId    Int?
  msrp            Float?
  horsepower      Int?
  engineSize      Float?
  transmission    String?
  bodyType        String?
  doors                 Int?
  fiscalPower           Int?
  co2                   Int?
  critAir               Int? // Vignette Crit'Air 0-5, null si inconnu
  firstRegistrationDate DateTime?
  laCentraleVersionId   Int? // versionId La Centrale pour la cote
  estimatedValue        Float? // Valeur estimée saisie manuellement par l'utilisateur
  maintenanceConfig     Json? // Intervalles personnalises par l'utilisateur
  maintenanceLastKm     Json? // Dernier km par type d'entretien (baselines manuels)
  monthlyFuelBudget     Float? // Budget carburant mensuel en €
  annualKmGoal          Int? // Objectif kilométrage annuel
  createdAt             DateTime @default(now())
  updatedAt             DateTime @updatedAt

  userId String
  user   Utilisateur @relation(fields: [userId], references: [id], onDelete: Cascade)

  documents      Document[]
  expenses       Depense[]
  mileageEntries EntreeKilometrage[]
  fuelEntries    EntreeCarburant[]
  shareLinks     LienPartage[]

  @@index([userId])
  @@map("vehicules")
}

model Document {
  id             String       @id @default(uuid())
  name           String
  type           DocumentType
  filePath       String
  fileName       String
  expirationDate DateTime?
  notes          String?
  reminderDays   Int[]        @default([30, 7])
  createdAt      DateTime     @default(now())
  updatedAt      DateTime     @updatedAt

  vehicleId String
  vehicle   Vehicule @relation(fields: [vehicleId], references: [id], onDelete: Cascade)

  @@index([vehicleId])
  @@index([vehicleId, expirationDate])
  @@map("documents")
}

model Depense {
  id          String          @id @default(uuid())
  amount      Float
  category    ExpenseCategory
  date        DateTime
  description String?
  mileage     Int?
  createdAt   DateTime        @default(now())
  updatedAt   DateTime        @updatedAt

  vehicleId String
  vehicle   Vehicule @relation(fields: [vehicleId], references: [id], onDelete: Cascade)

  @@index([vehicleId, date])
  @@map("depenses")
}

model Alerte {
  id           String    @id @default(uuid())
  title        String
  message      String
  type         AlertType
  isRead       Boolean   @default(false)
  dueDate      DateTime?
  snoozedUntil DateTime?
  emailSent    Boolean   @default(false)
  createdAt    DateTime  @default(now())

  userId String
  user   Utilisateur @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([userId, isRead])
  @@map("alertes")
}

model EntreeKilometrage {
  id        String   @id @default(uuid())
  mileage   Int
  date      DateTime
  notes     String?
  createdAt DateTime @default(now())

  vehicleId String
  vehicle   Vehicule @relation(fields: [vehicleId], references: [id], onDelete: Cascade)

  @@index([vehicleId])
  @@map("entrees_kilometrage")
}

enum DocumentType {
  INSURANCE
  TECHNICAL_INSPECTION
  INVOICE
  WARRANTY
  REGISTRATION
  ACCIDENT_REPORT
  OTHER
}

enum ExpenseCategory {
  MAINTENANCE
  OIL_CHANGE
  BRAKES
  TIRES
  BODYWORK
  WINDSHIELD
  TECHNICAL_INSPECTION
  PARKING
  TOLL
  CLEANING
  FINE
  OTHER
}

enum AlertType {
  DOCUMENT_EXPIRY
  MAINTENANCE_DUE
  INSPECTION_DUE
  INSURANCE_RENEWAL
  OIL_CHANGE
  TIRE_SEASON
  MILEAGE_SERVICE
  ZFE_RESTRICTION
  BUDGET_SPIKE
  COST_PER_KM
  FUEL_BUDGET_EXCEEDED
  KM_RECORD
  CO2_MALUS
  FUEL_PRICE_DROP
  OTHER
}

enum FuelType {
  GASOLINE
  DIESEL
  HYBRID
  ELECTRIC
  LPG
  OTHER
}

model EntreeCarburant {
  id            String   @id @default(uuid())
  date          DateTime
  mileage       Int
  liters        Float
  pricePerLiter Float
  totalCost     Float
  isFull        Boolean  @default(true)
  notes         String?
  createdAt     DateTime @default(now())

  vehicleId String
  vehicle   Vehicule @relation(fields: [vehicleId], references: [id], onDelete: Cascade)

  @@index([vehicleId, date])
  @@map("entrees_carburant")
}

model AbonnementPush {
  id        String   @id @default(uuid())
  endpoint  String
  p256dh    String
  auth      String
  createdAt DateTime @default(now())

  userId String
  user   Utilisateur @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, endpoint])
  @@index([userId])
  @@map("abonnements_push")
}

model LienPartage {
  id                String    @id @default(uuid())
  token             String    @unique @default(uuid())
  expiresAt         DateTime?
  createdAt         DateTime  @default(now())
  viewCount         Int       @default(0)
  lastViewedAt      DateTime?
  passwordHash      String?
  hidePurchasePrice Boolean   @default(false)
  label             String?

  vehicleId String
  vehicle   Vehicule @relation(fields: [vehicleId], references: [id], onDelete: Cascade)

  userId String
  user   Utilisateur @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([vehicleId, userId])
  @@map("liens_partage")
}

model RefreshToken {
  id        String   @id @default(uuid())
  token     String   @unique
  userId    String
  user      Utilisateur @relation(fields: [userId], references: [id], onDelete: Cascade)
  expiresAt DateTime
  createdAt DateTime @default(now())

  @@index([userId])
  @@map("refresh_tokens")
}

model PasswordResetToken {
  id        String   @id @default(uuid())
  token     String   @unique
  userId    String
  user      Utilisateur @relation(fields: [userId], references: [id], onDelete: Cascade)
  expiresAt DateTime
  createdAt DateTime @default(now())

  @@index([userId])
  @@map("password_reset_tokens")
}
